# gradience-wallet

./: .gitignore  Caddyfile  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.ai-proxy  GETTING_STARTED.md  README.md  README.zh-CN.md  TASKS.md  demo-audit.csv  docker-compose.caddy.yml  docker-compose.yml  gradience-ai-proxy.service  start-local.ps1  start-local.sh
.sqlx/: query-0f638776d2e7ddd10f922e4f32b65315b62b2067726efb7051768f6b6bbc617f.json  query-18997523f7cb3e5b5cd1888dbbca86161829e4c26242825e1e704f1151472570.json  query-1f6e3d3fa3f2c6c0a3eba37bbbc3a5a77e5938a1e37dff284a7781a54129ff32.json  query-1ffb6d1db9d0a45dee9a22cd101352f5e929b6a68def2c8b1025a126c89c2694.json  query-22c20ea6dd9689c6a6ffc097d47be87bb2fba51044e73df96a9f37d4444b9f5f.json  query-2667939d15b97c44f949ad78687b51147d52a6810d7fc7471f689387256dd3a3.json  query-38f27901114e31eab5051f6eb0565d7f5be6b1c7c59cdf931e34f2f2e04e1257.json  query-3c7b26642563e84c224acbea7858a445d8ad60e1239c7ef2b88a3cc3de0b2355.json  query-41248acd3ab344e9882a763cb25a5a181378773ca3f57fe8b80b8888f1f7e799.json  query-41cf09e29f878583f8891432673ebf8038e25adc364e60f89432e94e3bee9230.json  query-4217749c5a3d86c9fc8981bbf89eb1f68eefa32001e3460a8962b4b7a0993a2c.json  query-5014b6c3d4b740ccffef77c1a65689080c700edbfb804b2ee8d95aca11b872c0.json  query-6653c5393163d63f459fb4790801844e8c6d08ea5c87910da714f641c6400ced.json  query-746c648edb7f540cea57ddfe7f733c3d5bb4c1b0a83e2d121bd8abc785bcf339.json  query-76e5dca4b592bbc401486929a06a95e167acc5ad216c5aa0f0e3bfe07b56a99d.json  query-7734d481fa510749519fe5f8e7b8e18c5dd7ba08ed84457f09cb600b623564d7.json  query-8127e4c89806afe767ae76052fa41c7d555475d3d6a39035a0f92f8b6d54792b.json  query-876659b0efd2c0b7ae07ac13efa5e9d38bd5825aac3fc750d62a6095f498eb9b.json  query-8795651a5bd10b062de982b89ba1efd7357d5f2fd903f79f51bccbb660f0dd46.json  query-8f038bd0e6a9910782fcbebb131ab4b8426bdf9db97e1c6ec382e97fd3f20845.json  query-920e726748f7aa2d7f985469beaf2657463afe064ce9a0254fd11753aff7578d.json  query-953cc8f8564c6378830806ee31f48f8f9a6f9a4dc7603b630d6b76995cb51ff1.json  query-9dd9c6fe6746de243fa66b30febf5cd88b878d9d8ca02dc4b59660ffa2d94445.json  query-a8de67648a12a7c2924d16e3aa8a697d54d3027d66d537d0932544f6a3fd133c.json  query-aa3f82ca28c98b8ded7e2b15bb99e1240404b69623e1596e655d8138dc8bf909.json  query-bbbfb03afa8f5d0f39c23c39b836a77e69b6bf1ec3239c3fbe1aa9d399ff756b.json  query-be814d814f8d1c82386d139196f272becf66dae0c0c52a2c334eb0617aaaa2c4.json  query-be9b7247b719f9719907f574ffa5bc0d03b65a22974c91f7a88a9af7052b3a13.json  query-c9e73387bfcbb26e4b03851a1d6b0441ebbd8d713e1b02147a39f624dcb155df.json  query-d517babf88f93321834f688b92eb0aa36cbc039057343265b07c8004e1e54dd9.json  query-db3b0a9b508644c9a78c096a679055ede93c65dde594f174fd3389f8ac4a45ce.json  query-e6a3f619354dac2076220f350fe2585a985158e38e7dc38a03d5ec1ceae30bb7.json  query-e81d5d67edd04299bddcc43094cac53341dd15354b4fa49e0cb83f6e541af5a3.json  query-ed69b1e38f3b72b29289e0fef1750e3a90da3f53725edb4cc1c3ed33911880f8.json  (+2 more)
crates/gradience-ai-proxy/: Cargo.toml
crates/gradience-ai-proxy/src/: handlers.rs  main.rs  middleware.rs  state.rs
crates/gradience-api/: Cargo.toml
crates/gradience-api/src/: handlers.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/gradience-cli/: Cargo.toml
crates/gradience-cli/src/: cli.rs  context.rs  main.rs
crates/gradience-cli/src/commands/: agent.rs  ai.rs  api_key.rs  audit.rs  auth.rs  dex.rs  mcp.rs  mod.rs  pay.rs  policy.rs  start.rs  team.rs  wallet.rs
crates/gradience-cli/tests/: e2e_tests.rs
crates/gradience-core/: Cargo.toml
crates/gradience-core/examples/: generate_state_channel_sig.rs
crates/gradience-core/src/: chain.rs  config.rs  error.rs  lib.rs
crates/gradience-core/src/aa/: biconomy.rs  biconomy_session.rs  bundler.rs  config.rs  factory.rs  mod.rs  particle.rs  paymaster.rs  user_op.rs
crates/gradience-core/src/agent/: session.rs
crates/gradience-core/src/ai/: balance.rs  gateway.rs  mod.rs
crates/gradience-core/src/ai/providers/: anthropic.rs  openai.rs
crates/gradience-core/src/audit/: anchor.rs  logger.rs  merkle.rs  mod.rs  service.rs
crates/gradience-core/src/dex/: jupiter.rs  lifi.rs  mod.rs  oneinch.rs  service.rs  uniswap.rs
crates/gradience-core/src/earn/: client.rs  mod.rs
crates/gradience-core/src/identity/: api_key.rs
crates/gradience-core/src/ows/: adapter.rs  local_adapter.rs  mod.rs  signing.rs  vault.rs
crates/gradience-core/src/payment/: base_x402.rs  hsp.rs  mod.rs  mpp.rs  mpp_client.rs  mpp_session.rs  protocol.rs  router.rs  state_channel.rs  stellar_x402.rs  x402.rs
crates/gradience-core/src/policy/: dynamic.rs  engine.rs  forta.rs  intent.rs  market.rs  merge.rs  mod.rs  service.rs  spending.rs
crates/gradience-core/src/portfolio/: blockscout.rs  discovery.rs  mod.rs
crates/gradience-core/src/rpc/: conflux_core.rs  evm.rs  mod.rs  solana.rs  stellar.rs  ton.rs
crates/gradience-core/src/team/: mod.rs  shared_budget.rs  workspace.rs
crates/gradience-core/src/tests/: audit_logger_tests.rs  dex_service_tests.rs  evm_rpc_tests.rs  merkle_tests.rs  mod.rs  mpp_integration_tests.rs  ows_adapter_tests.rs  payment_tests.rs  policy_engine_tests.rs  team_tests.rs  wallet_manager_tests.rs
crates/gradience-core/src/wallet/: hd.rs  manager.rs  mod.rs  service.rs
crates/gradience-core/tests/: aa_biconomy_session_paymaster_demo.rs  aa_biconomy_session_xlayer_demo.rs  aa_biconomy_xlayer_demo.rs  aa_counterfactual_demo.rs  aa_particle_xlayer_demo.rs  aa_xlayer_demo.rs  agent_biconomy_integration_demo.rs  base_address_demo.rs  biconomy_async_init_demo.rs  earn_client_demo.rs  earn_quote_demo.rs  particle_biconomy_session_demo.rs  stellar_address_demo.rs
crates/gradience-mcp/: Cargo.toml
crates/gradience-mcp/src/: args.rs  lib.rs  main.rs  mcp.rs  server.rs  tools.rs
crates/gradience-mcp/tests/: tool_tests.rs
crates/gradience-sdk-node/: Cargo.toml
crates/gradience-sdk-node/src/: lib.rs
docs/: 01-prd.md  (+22 more)
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/python/gradience_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+152 files in other folders)
