[workspace]
resolver = "2"
members = [
    "crates/gradience-core",
    "crates/gradience-mcp",
    "crates/gradience-cli",
    "crates/gradience-db",
    "crates/gradience-api",
    "crates/gradience-ai-proxy",
    "crates/gradience-sdk-node",
]

[workspace.dependencies]
rlp = "0.5"
# Core
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha3 = "0.10"
zeroize = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

# OWS
ows-core = ">=1.1.0, <1.3.0"

# MCP
rmcp = "0.0"
schemars = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# Crypto / Keys
ring = "0.17"
secp256k1 = { version = "0.28", features = ["recovery"] }
ed25519-dalek = "2"

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = "0.7"

# Testing
mockall = "0.12"
