[package]
name = "gradience-ai-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gradience-ai-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
axum.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
hex.workspace = true
chrono.workspace = true
reqwest.workspace = true
rand = "0.8"
ring.workspace = true

gradience-core = { path = "../gradience-core" }
gradience-db = { path = "../gradience-db" }
mpp = { version = "0.9.1" }

[dependencies.ows-lib]
git = "https://github.com/open-wallet-standard/core"
