[package]
name = "gradience-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gradience-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
webauthn-rs = "0.5"
url = "2"
hex.workspace = true
gradience-core = { path = "../gradience-core" }
gradience-db = { path = "../gradience-db" }
