[package]
name = "gradience-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "gradience_api"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
webauthn-rs = "0.5"
rust-embed = "8"
mime_guess = "2"
url = "2"
hex.workspace = true
rlp.workspace = true
chrono.workspace = true
reqwest.workspace = true
rand = "0.8"

gradience-core = { path = "../gradience-core" }
gradience-db = { path = "../gradience-db" }
gradience-mcp = { path = "../gradience-mcp" }
mpp = { version = "0.9.1" }

[dependencies.ows-lib]
git = "https://github.com/open-wallet-standard/core"
