[package]
name = "gradience-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gradience"
path = "src/main.rs"

[dependencies]
dirs = "5"
uuid.workspace = true
gradience-core = { path = "../gradience-core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rpassword.workspace = true
sqlx.workspace = true
gradience-db = { path = "../gradience-db" }
gradience-mcp = { path = "../gradience-mcp" }
hex.workspace = true
rlp.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
mpp = { version = "0.9.1", features = ["tempo", "client"] }

[dependencies.ows-lib]
git = "https://github.com/open-wallet-standard/core"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
