[package]
name = "gradience-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
sha3.workspace = true
zeroize.workspace = true
tracing.workspace = true
ring.workspace = true
async-trait = "0.1"
rlp.workspace = true
reqwest.workspace = true
secp256k1.workspace = true

[dependencies.ows-core]
version = ">=1.1.0, <1.3.0"

[dependencies.ows-lib]
git = "https://github.com/open-wallet-standard/core"

[dependencies.ows-signer]
git = "https://github.com/open-wallet-standard/core"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
