[package]
name = "gradience-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
sha3.workspace = true
zeroize.workspace = true
tracing.workspace = true
ring.workspace = true
async-trait = "0.1"
sqlx.workspace = true
gradience-db = { path = "../gradience-db" }
rlp.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
rand = "0.8"
tokio.workspace = true
mpp = { version = "0.9.1", features = ["tempo", "client"] }
alloy = { version = "1.8", features = ["signer-local", "contract"] }
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = "2"
num-bigint = "0.4"
ton = { version = "0.1", default-features = false }
tlb-ton = "0.7"
ton-contracts = { version = "0.7", default-features = false, features = ["wallet"] }
soroban-client = "0.5.5"
sha2 = "0.10"
stellar-strkey = "0.0.8"

[dependencies.ows-core]
git = "https://github.com/open-wallet-standard/core"

[dependencies.ows-lib]
git = "https://github.com/open-wallet-standard/core"

[dependencies.ows-signer]
git = "https://github.com/open-wallet-standard/core"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
