[package]
name = "gradience-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "gradience_mcp"
path = "src/lib.rs"

[[bin]]
name = "gradience-mcp"
path = "src/main.rs"

[dependencies]
gradience-core = { path = "../gradience-core" }
gradience-db = { path = "../gradience-db" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
rlp.workspace = true
reqwest.workspace = true
ring.workspace = true
dirs = "5"

[dependencies.ows-lib]
git = "https://github.com/open-wallet-standard/core"
